--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <div class="card">
       <div class="card_img">
-        <img src="./images/image-product-desktop.jpg" alt="Product">
+        <img srcset="./images/image-product-mobile.jpg 500px" sizes="(max-width: 500px) 500px" src="./images/image-product-desktop.jpg" alt="Product">
       </div>
 
       <div class="card_info">
@@ -24,15 +24,18 @@
           Perfumer-Creator for the House of CHANEL.
         </p>
 
-        <span class="recent_price">
-          $149.99
-        </span>
+        <div class="prices">
+          <span class="recent_price">
+            $149.99
+          </span>
 
-        <span class="old_price">
-          <s>$169.99</s>
-        </span>
+          <span class="old_price">
+            <s>$169.99</s>
+          </span>
+        </div>
 
         <button class="add_btn">
+          <img src="./images/icon-cart.svg" alt="Icon Cart">
           Add to Cart
         </button>
 
